tests/field/get_on_float.rev
(12.34).bar // error: only structure instances have properties